--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-slick": "^0.29.0",
     "sass": "^1.58.3",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
